force-app/main/default/objects/X7S_Files_Criteria_Set_Assignment__mdt/X7S_Files_Criteria_Set_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>Criteria set assignment for 7S Files accelerator from 7Summits.</description>
    <label>7S Files Criteria Set Assignment</label>
    <pluralLabel>7S Files Criteria Set Assignments</pluralLabel>
</CustomObject>