force-app/main/default/objects/X7S_Files_Criteria_Set_Assignment__mdt/fields/Logic_Id__c.field-meta.xml
<CustomField>
    <fullName>Logic_Id__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Assignment ID for Share Logic configuration</inlineHelpText>
    <label>Logic Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>