force-app/main/default/objects/X7S_Files_Criteria_Set_Assignment__mdt/fields/X7S_Files_Criteria__c.field-meta.xml
<CustomField>
    <fullName>X7S_Files_Criteria__c</fullName>
    <description>Related criteria field</description>
    <inlineHelpText>Related criteria field</inlineHelpText>
    <label>7S Files Criteria</label>
    <referenceTo>X7S_Files_Criteria__mdt</referenceTo>
    <relationshipLabel>7S Files Criteria Set Assignments</relationshipLabel>
    <relationshipName>X7S_Files_Criteria_Set_Assignments</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>