force-app/main/default/objects/X7S_Files_Criteria_Set_Assignment__mdt/fields/X7S_Files_Criteria_Set__c.field-meta.xml
<CustomField>
    <fullName>X7S_Files_Criteria_Set__c</fullName>
    <description>Related criteria set</description>
    <inlineHelpText>Related criteria set</inlineHelpText>
    <label>7S Files Criteria Set</label>
    <referenceTo>X7S_Files_Criteria_Set__mdt</referenceTo>
    <relationshipLabel>7S Files Criteria Set Assignments</relationshipLabel>
    <relationshipName>X7S_Files_Criteria_Set_Assignments</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>