force-app/main/default/objects/X7S_Files_Criteria_Set_Assignment__mdt/listViews/Criteria_Set_Details.listView-meta.xml
<ListView>
    <fullName>Criteria_Set_Details</fullName>
    <columns>X7S_Files_Criteria_Set__c</columns>
    <columns>X7S_Files_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>Criteria Set Details</label>
</ListView>